syntax = "proto3";

package portal.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "xhappen/api/portal/v1;v1";
option java_multiple_files = true;
option java_package = "portal.v1";
option objc_class_prefix = "PortalV1";

service Config {
  // 获取基础配置
  rpc GetBasicConfig (GetBasicConfigRequest) returns (GetBasicConfigReply)  {
        option (google.api.http) = {
          post: "/basic/config",
          body: "*",
        };
  }

  //仅内部使用
  rpc GetSocketHostConfig (GetSocketHostConfigRequest) returns (GetSocketHostConfigReply)  {}

}

message GetBasicConfigRequest {
  string deviceID = 1 [json_name = "device_id", (validate.rules).string = {
    min_len: 24, 
    max_len: 36
  }];
}

message GetBasicConfigReply {
  string socketHost = 1 [json_name = "socket_host"];
  string fileServerHost =2 [json_name = "file_server_host"];
}

message GetSocketHostConfigRequest {
  string deviceID = 1 [json_name = "device_id", (validate.rules).string = {
    min_len: 24, 
    max_len: 36
  }];
}

message GetSocketHostConfigReply {
  string socketHost = 1 [json_name = "socket_host"];
}